[tool.poetry]
name = "test"
version = "v4.2.0"
description = "One-stop solution for HTTP(S) testing."
license = "MIT"
readme = "README.md"
authors = ["Bang-Bo Zheng <zhengbangbo@hotmail.com>"]

homepage = "https://github.com/zhengbangbo/pi"
repository = "https://github.com/zhengbangbo/pi"
documentation = "https://github.com/zhengbangbo/pi"

keywords = ["python"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]

include = ["docs/CHANGELOG.md"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22.0"
pytest = "^7.1.1"
toml = "^0.10.2"
sqlalchemy = {version = "^1.4.36", optional = true}
pymysql = {version = "^1.0.2",optional = true}

[tool.poetry.extras]

[tool.poetry.dev-dependencies]
coverage = "^4.5.4"

[tool.poetry.scripts]
run = "src.main:main"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
